--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,9 @@ buildscript {
         // in the individual module build.gradle files
     }
 }
-
+ext {
+    roomVersion = '1.1.1'
+}
 allprojects {
     repositories {
         google()
