update using room database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".addTo.AddToDoTask">
+        <activity android:name=".TaskMainActivity" />
+        <activity android:name=".RoomDatabase.AddedTasks" />
+        <activity android:name=".RoomDatabase.MainActivity2">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TaskMainActivity" />
-        <activity android:name=".RoomDatabase.AddedTasks" />
-        <activity android:name=".RoomDatabase.MainActivity2"></activity>
     </application>
 
 </manifest>
